<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Basic -->
    <string name="app_name">CCLab GPS</string>
    
    <!-- GpsService -->
    <string name="service_start">GPS logging is successfully started.</string>
    <string name="service_stop">GPS logging is successfully finished.</string>
    <string name="service_error">Something goes wrong.</string>
    <string name="service_thanks">Thanks.</string>
    <string name="service_warning_gps_off">Do NOT turn off GPS while logging.</string>
    <string name="service_numberofpoints_message">points are collected.</string>
    
    <!-- MainActivity -->
    <string name="main_button_logging_start">Start logging</string>
    <string name="main_button_logging_stop">Stop logging</string>
    <string name="main_button_board">Board</string>
    <string name="main_button_rank">Rank</string>
    <string name="main_button_about">About</string>
    <string name="main_textview_thanks">Thanks for your contribution</string>
    <string name="main_textview_loggingstatus_on">Now logging</string>
    <string name="main_textview_loggingstatus_off">NOT logging</string>
    <string name="main_textview_contributor">Contributor: </string>
    <string name="main_textview_contribution">Contribution: </string>
    <string name="main_alert_enable_gps_question">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="main_alert_enable_gps_yes">Yes</string>
    <string name="main_alert_enable_gps_no">No</string>
    <string name="main_contentsdescription_mainimage">Sky</string>
    <string name="main_toast_studentid_confirmed">Student ID is successfully stored</string>
    <string name="main_toast_studentid_needed">Student ID must be needed</string>
    <string name="main_toast_update_contribution">Contribution is updated</string>
    <string name="main_toast_request_network">Connect to internet before stop the logging</string>
    
    <!-- Widget -->
    <string name="widget_on">On Logging</string>
    <string name="widget_off">Start Logging</string>
    
    <!-- Rank -->
    <string name="rank_activity_title">RankActivity</string>
    <string name="rank_loading">Loading..</string>
    
    <!-- About -->
    <string name="about_activity_title">AboutActivity</string>
    <string name="about_introduction_title">Introduction</string>
    <string name="about_privacy_title">Privacy</string>
    <string name="about_network_title">Network</string>
    <string name="about_battery_title">Battery</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_introduction_contents"></string>
    <string name="about_privacy_contents"></string>
    <string name="about_network_contents"></string>
    <string name="about_battery_contents"></string>
    <string name="about_contact_contents"></string>
    
    <!-- Registration -->
    <string name="registration_activity_title">RegistrationActivity</string>
    <string name="registration_button_confirm">Confirm</string>
    <string name="registration_string_userid_hint">2013000000</string>
    
    <!-- BoardActivity -->
    <string name="board_activity_title">BoardActivity</string>
	<string name="board_list_comment">Comment</string>
	<string name="board_loading">Loading</string>
	<string name="board_error_io">Networking problem</string>
    <string name="board_error_malformedurl">Server does NOT response.</string>
    <string name="board_error">Unknown error occurs.</string>
    
	<!-- WritingActivity -->
	<string name="writing_nickname_hint">Nickname</string>
	<string name="writing_notice">Notice</string>
	<string name="writing_contents_hint">Contents</string>
	<string name="writing_send">Write</string>
	<string name="writing_formcheck_empty">Empty nick name or contents</string>
    <string name="writing_formcheck_script">There are not allowed characters.</string>
    <string name="writing_waiting">Please wait</string>
    <string name="writing_complete">Complete</string>
	
	<!-- CommentActivity -->
	<string name="comment_contents_hint">Contents</string>
	<string name="comment_send">Write</string>
	<string name="comment_complete">Complete</string>
	
	
</resources>