<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainactivity_container_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingBottom="20dp"
    android:background="#FFFFFF"
    tools:context="org.cclab.microsoft_gpsreceiver.AboutActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="30dp"
        android:orientation="vertical" >
    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:gravity="center_vertical"
	        android:drawableLeft="@drawable/ic_action_about_dark"
	        android:text="@string/about_introduction_title"
	        android:textSize="18sp"
	        android:textColor="#666666"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="32dp"
	        android:text="@string/about_introduction_contents"
	        android:fontFamily="sans-serif-light"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:gravity="center_vertical"
	        android:drawableLeft="@drawable/ic_action_place"
	        android:text="@string/about_privacy_title"
	        android:textSize="18sp"
	        android:textColor="#666666"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="32dp"
	        android:text="@string/about_privacy_contents"
	        android:fontFamily="sans-serif-light"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:gravity="center_vertical"
	        android:drawableLeft="@drawable/ic_action_import_export"
	        android:text="@string/about_network_title"
	        android:textSize="18sp"
	        android:textColor="#666666"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="32dp"
	        android:text="@string/about_network_contents"
	        android:fontFamily="sans-serif-light"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:gravity="center_vertical"
	        android:drawableLeft="@drawable/ic_action_battery"
	        android:text="@string/about_battery_title"
	        android:textSize="18sp"
	        android:textColor="#666666"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="32dp"
	        android:text="@string/about_battery_contents"
	        android:fontFamily="sans-serif-light" />
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:gravity="center_vertical"
	        android:drawableLeft="@drawable/ic_action_email"
	        android:text="@string/about_contact_title"
	        android:textSize="18sp"
	        android:textColor="#666666"/>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="32dp"
	        android:text="@string/about_contact_contents"
	        android:fontFamily="sans-serif-light" />
	    
    </LinearLayout>
</ScrollView>