<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!--
	<EditText
	    android:id="@+id/edittext_title"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:lines="5"
	    android:hint="제목"
	    />
	  -->
	<EditText
	    android:id="@+id/board_writing_edittext_nickname"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/writing_nickname_hint" />
	
	
	<CheckBox
	    android:id="@+id/board_writing_checkbox_addnotice"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:visibility="invisible"
	    android:text="@string/writing_notice" />
	
	<EditText
	    android:id="@+id/board_writing_edittext_content"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:hint="@string/writing_contents_hint"
	    android:lines="5"
	    android:maxLines="15" />
	
	<Button
	    android:id="@+id/board_writing_button_send"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="onSend"
	    android:text="@string/writing_send" />
	
</LinearLayout>